{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 16,
  "lineage": "c4b03d0e-51e0-325e-3d83-26edbccdecc2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152719208094:internet-gateway/igw-0c9759962a05e93a9",
            "id": "igw-0c9759962a05e93a9",
            "owner_id": "152719208094",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "tags_all": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-0a80d3b007e9c5a2d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152719208094:route-table/rtb-01baec9b0ddf27021",
            "id": "rtb-01baec9b0ddf27021",
            "owner_id": "152719208094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9759962a05e93a9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-naveen"
            },
            "tags_all": {
              "Name": "Terraform_Main_table-naveen"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80d3b007e9c5a2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e191e6ec86f2813d",
            "route_table_id": "rtb-01baec9b0ddf27021",
            "subnet_id": "subnet-0bf94ace08038eb43"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152719208094:security-group/sg-00ec81bd7ee7b536b",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ec81bd7ee7b536b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "152719208094",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a80d3b007e9c5a2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152719208094:subnet/subnet-0bf94ace08038eb43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf94ace08038eb43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152719208094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_Public_Subnet1-naveen"
            },
            "tags_all": {
              "Name": "Terraform_Public_Subnet1-naveen"
            },
            "vpc_id": "vpc-0a80d3b007e9c5a2d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152719208094:subnet/subnet-029d0f28f1340db18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029d0f28f1340db18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152719208094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_Public_Subnet2-naveen"
            },
            "tags_all": {
              "Name": "Terraform_Public_Subnet2-naveen"
            },
            "vpc_id": "vpc-0a80d3b007e9c5a2d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152719208094:subnet/subnet-040895bf98f41ceba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040895bf98f41ceba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152719208094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_Public_Subnet3-naveen"
            },
            "tags_all": {
              "Name": "Terraform_Public_Subnet3-naveen"
            },
            "vpc_id": "vpc-0a80d3b007e9c5a2d"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152719208094:vpc/vpc-0a80d3b007e9c5a2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d8851267e6b5cdb4",
            "default_route_table_id": "rtb-0bd2b94461acc23a3",
            "default_security_group_id": "sg-0d9b565f6a6f441f7",
            "dhcp_options_id": "dopt-077b52d7ea2988d81",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a80d3b007e9c5a2d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd2b94461acc23a3",
            "owner_id": "152719208094",
            "tags": {
              "Name": "terraform-aws-naveen",
              "Owner": "Sreeharsha Veerapalli",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "terraform-aws-naveen",
              "Owner": "Sreeharsha Veerapalli",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}